fix spacing on case studies'

--- a/_sass/designs.scss
+++ b/_sass/designs.scss
@@ -14,7 +14,7 @@
       text-align: left;
       margin-bottom: 100px;
       figure {
-        width: 50%;
+        width: 47%;
         padding: 0;
         @media screen and (max-width: 800px) {
           width: 100%;
@@ -63,7 +63,7 @@
         background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 30%, rgba(255,255,255,1) 30%, rgba(255,255,255,1) 100%);
       }
       figure {
-        margin: auto 3% auto -3%;
+        margin: auto 3% auto 0;
         float: left;
         @media screen and (max-width: 800px) {
           margin: auto;
@@ -79,7 +79,7 @@
       }
       figure {
         float: right;
-        margin: auto -3% auto 3%;
+        margin: auto 0% auto 3%;
         @media screen and (max-width: 800px) {
           margin: auto;
           padding: 0 20px;
